err/libtopic.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/libtopic'...
Compiling './lib/python3.5/site-packages/libtopic/webbot.py'...
***   File "./lib/python3.5/site-packages/libtopic/webbot.py", line 14
    print 'Analysing url : ' + url
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/libtopic/wiht.py'...
***   File "./lib/python3.5/site-packages/libtopic/wiht.py", line 47
    print 'Registering new url : '+siteUrl
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/libtopic/wst.py'...
***   File "./lib/python3.5/site-packages/libtopic/wst.py", line 45
    print "Serializing field : '" + str(field_node.name) + "'"
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libtopic/xml.py'...
***   File "./lib/python3.5/site-packages/libtopic/xml.py", line 9
    print 'DynamicContainer initialisation : ' + xmlNode.name
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/libtopic-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
